[gd_scene load_steps=5 format=3 uid="uid://bwkcuusg8mj06"]

[ext_resource type="Script" path="res://example_scenes/input_toggle.gd" id="1_ahnws"]
[ext_resource type="FontFile" uid="uid://dqgaor6ji1vft" path="res://font/liberation-fonts-ttf-2.00.1/LiberationMono-Regular.ttf" id="2_wh7q8"]
[ext_resource type="Script" path="res://addons/gas/gas_richtextlabel.gd" id="3_1sgiy"]
[ext_resource type="Texture2D" uid="uid://dnhuhokxjtoa6" path="res://example_assets/bluebird.png" id="4_qw2ht"]

[node name="InputToggle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ahnws")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="AccessibleRichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/mono_font = ExtResource("2_wh7q8")
bbcode_enabled = true
text = "You can use [code]GASConfig.set_toggle_action[/code] to specify that certain actions/inputs are \"toggles.\" For an input the player would normally need to hold down (i.e. the player's car will accelerate as long as a certain key is held down, and will stop accelerating when released), you can change it so instead pressing the input once toggles the input being held down, and pressing it again toggles it off (i.e. press the key once to start the player's car acceleration, press the key again to stop it). You can set whether each of the four movement directions (the arrow keys on your keyboard or the d-pad on your gamepad) are \"toggles\" below, then you can press or hold those keys/buttons to see the effect."
fit_content = true
script = ExtResource("3_1sgiy")
accessible_text = "You can use [code]GASConfig.set_toggle_action[/code] to specify that certain actions/inputs are \"toggles.\" For an input the player would normally need to hold down (i.e. the player's car will accelerate as long as a certain key is held down, and will stop accelerating when released), you can change it so instead pressing the input once toggles the input being held down, and pressing it again toggles it off (i.e. press the key once to start the player's car acceleration, press the key again to stop it). You can set whether each of the four movement directions (the arrow keys on your keyboard or the d-pad on your gamepad) are \"toggles\" below, then you can press or hold those keys/buttons to see the effect."

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Down" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Toggle Hold for \"Down\""

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Left" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Toggle Hold for \"Left\""

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Right" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Toggle Hold for \"Right\""

[node name="CenterContainer4" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Up" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer4"]
unique_name_in_owner = true
layout_mode = 2
text = "Toggle Hold for \"Up\""

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ArUp" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("4_qw2ht")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ArLeft" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("4_qw2ht")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ArRight" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("4_qw2ht")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ArDown" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("4_qw2ht")
expand_mode = 1
stretch_mode = 5

[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer/Down" to="." method="_on_down_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer2/Left" to="." method="_on_left_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer3/Right" to="." method="_on_right_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer4/Up" to="." method="_on_up_toggled"]
